2015-08-24
- begin cyclic timer interface

2015-08-24
- add EditCurrentGameName action
- better handling of save/save as/close, with more return values from Game class

2015-08-24
- add title bar of the main window, depending on the current opened file
- add adjustement of the actions of the main window, depending on the current opened file
- make the game name editable by double-clicking the tab bar

2015-08-23
- add some checks on game creation/opening/saving
- add assertions
- add const to some methods
- add documentations
- add open/save in Game.cpp

2015-08-22
- add open/save/save as/save all/close/closeall/quit mechanisms

2015-08-21
- add some connections
- add ui creation and insertion in the main window

2015-08-19
- add UiEditGameName class
- comment sources (doxygen)
- MainWindow is now a singleton

2015-08-19
- create first actions
- create the controller