@@ -2,6 +2,7 @@ TODO
 
 - application icon
 - edit cyclic timer per item ??
+- save QPushButton* instead of QDialogButtonBox* in UiEditGameName.hpp ?
 
 
 HINTS
